--- a/estilo2.css
+++ b/estilo2.css
@@ -59,99 +59,190 @@ header div a:hover {
 }
 main {
     font-family: Solway, cursive;
-}
-.tabla {
-    width: 100%;
-    height: 150px;
-    /* border: var(--paraBordes); */
-}
-.tabladatos {
-    /* border: var(--paraBordes); */
-    width: 86%;
-    height: 150px;
-    margin-left: 7%;
+}.contenedor-imagenes{
     display: flex;
+    width: 86%;
+    height: 100%;
+    margin-left: 7%;
+    margin-top: 2%;
     justify-content: space-between;
+    /* border: var(--paraBordes); */
+}
+.contenedor-img {
+    position: relative;
+    width: 32%;
 }
 
-.tabladatos1 {
-    /* border: var(--paraBordes); */
-    padding: 15px 0;
-    width: 43%;
-    height: 150px;
-    display: flex;
+.imagen-fondo {
+    display: block;
+    width: 100%;
+}
+.contenedor-texto {
+    position: absolute;
+    top: 0%;
+    right: 0%;
+    left: 0%;
+    bottom: 0%; 
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transition: 0.5s ease;
+    background-color: rgba(0,0,0,.5);
+}
+.contenedor-texto i {
+    color: white;
+    font-size: 250%;
+    position: absolute;
+    top: 20%;
+    right: 45%;
+}
+.contenedor-texto h2 {
+    left: 15%;
+}
+.contenedor-texto h3 {
+    color: white;
+    font-size: 150%;
+    position: absolute;
+    top: 55%;
+    right: 35%;  
+}
+.texto {
+    font-size: 150%;
+    color: white;
+    position: absolute;
+    top: 30%;
+    left: 2%;
+}
+.contenedor-img:hover .contenedor-texto {
+    opacity: 1;
+}
+.ima {
+    background-color: brown;
+}
+
+.contenedor-imagenes2 {
+    display: flex; 
+    width: 86%;
+    height: 100%;
+    margin-left: 7%;
+    margin-right: 7%;
+    margin-top: 2%;
     justify-content: space-between;
+    display: none;
+    
+} 
+@media(max-width:1024px) {
+    .contenedor-imagenes2 {
+        display: block; 
+        display: flex; 
+        width: 90%;
+        justify-content: space-between;
+        margin-left: 5%;
+
+
+    }
 }
-.tabladatos2 {
-    padding: 15px 0;
-    /* border: var(--paraBordes); */
-    width: 43%;
-    height: 150px;
-    display: flex;
-    justify-content: space-between;
+@media(max-width:1025px) {
+    .contenedor-imagenes {
+        display: none;
+        width: 42%;
+    }
 }
-.titulos {
-    padding: 15px 0;
-    color: grey;
-}
-.tabladatos1 h3 span {
-    text-decoration: underline;
-}
-h3 {
-    width: 270px;
-    min-width: 270px;
-    height: 60px;
-    /* border: var(--paraBordes);  */
-}
-@media(max-width:1094px) {
-    .tabladatos {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        margin-top: 50px;
-        margin-left: 0%;
+@media(max-width:992px) {
+    .contenedor-imagenes2 {
+        margin-left: 4%;
+        width: 92%;
     }
 }
 @media(max-width:768px) {
-        h3 {
-            /* border: var(--paraBordes); */
-            margin-left: -50px;
-        }
+    .contenedor-imagenes2 {
+        margin-left: 4%;
+        width: 92%;
+        justify-content: center;
+        gap: 20px;
+        border: var(--paraBordes);
     }
-    @media(max-width:576px) {
-            .tabladatos1 {
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
-                margin-top: 230px;
-            }
-            .tabladatos2 {
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
-                margin-top: 100px;
-                
-            }
-        }
-    
+} 
+@media(max-width:576px) {
+    .sexta {
+        margin-top: -260px;
+    }
+    .contenedor-imagenes2 {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        object-fit: fill;
+        margin-left: 0%;
+        /* width: 1200px; */
+        margin-right: 0%;
+        border: var(--paraBordes);
+        width: 50%; 
+        gap: 20px;
+    } 
+    .contenedor-img2 {
+        /* border: 1px solid red; */
+        
+    }
+} 
+@media(max-width:576px) {
+    .contenedor-imagenes2 {
+        flex-wrap: nowrap;
+        justify-content: center;
+        align-items: center;
+        object-fit: cover;
+        width: 100%;
+        /* width: 1070px;
+        margin-left: -71%;
+        margin-right: 0%;
+        border: var(--paraBordes);  */
+        gap: 20px;
+    } 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+}
+.contenedor-img2 {
+    position: relative;
+    width: 40%;
+}
+.imagen-fondo2 {
+    display: block;
+    width: 100%;
+}
+.contenedor-texto2 {
+    position: absolute;
+    top: 0%;
+    right: 0%;
+    left: 0%;
+    bottom: 0%; 
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transition: 0.5s ease;
+    background-color: rgba(0,0,0,.5);
+}
+.contenedor-texto2 i {
+    color: white;
+    font-size: 250%;
+    position: absolute;
+    top: 20%;
+    right: 45%;
+}
+.contenedor-texto2 h2 {
+    left: 15%;
+}
+.contenedor-texto2 h3 {
+    color: white;
+    font-size: 150%;
+    position: absolute;
+    top: 55%;
+    right: 35%;  
+}
+.texto2 {
+    font-size: 150%;
+    color: white;
+    position: absolute;
+    top: 30%;
+    left: 2%;
+}
+.contenedor-img2:hover .contenedor-texto2 {
+    opacity: 1;
+}
