--- a/css/estilo.css
+++ b/css/estilo.css
@@ -91,14 +91,14 @@ main {
     text-align: left;
     align-items: center;
     justify-content: center;
-    border: var(--paraBordes);
+    /* border: var(--paraBordes); */
 } 
 .izquierda h2 {
     width: 100%;
     text-align: left;
     margin-top: 100px;
     font-size: 200%;
-    border: var(--paraBordes);
+    /* border: var(--paraBordes); */
 }/* 
 NO FUNCIONA EN RESPONSIVE*/
 /* 
@@ -115,7 +115,7 @@ NO FUNCIONA EN RESPONSIVE*/
     width: 100%;
     height: 70px;
     font-size: 350%;
-    border: var(--paraBordes);
+    /* border: var(--paraBordes); */
     /* 
 
     NO FUNCIONA EFECTO EN RESPONSIVE
@@ -288,6 +288,9 @@ NO FUNCIONA EN RESPONSIVE*/
       } 
 }
 @media(max-width:543px) {
+    .izquierda {
+        padding: 20px 0;
+    }
     .izquierda h1  {
         font-size: 280%;
       } 
@@ -296,6 +299,9 @@ NO FUNCIONA EN RESPONSIVE*/
     }
 }
 @media(max-width:392px) {
+    .izquierda {
+        padding: 10px 0;
+    }
     .izquierda h1  {
         font-size: 250%;
       } 
