--- a/css/estilo.css
+++ b/css/estilo.css
@@ -2,7 +2,7 @@
 * {
     margin: 0;
     padding: 0;
-    /* border: 1px solid blue; */  
+    /* border: 1px solid blue;  */
     box-sizing: border-box;
 }
 :root {
@@ -204,12 +204,12 @@ NO FUNCIONA EN RESPONSIVE*/
         flex-direction: column-reverse;
         align-items: center;
         height: auto;
-        border: var(--paraBordes); 
+        /* border: var(--paraBordes);  */
     }
     .derecha {
         display: flex;
         justify-content: center;
-        border: var(--paraBordes); 
+        /* border: var(--paraBordes);  */
         margin: 0 auto;
         width: 100%;
         height: auto;
@@ -296,6 +296,11 @@ NO FUNCIONA EN RESPONSIVE*/
       } 
     .izquierda h2 {
         font-size: 180%;
+    }
+}
+@media(max-width:440px) {
+    .izquierda {
+        padding: 2px 0;
     }
 }
 @media(max-width:392px) {
@@ -746,22 +751,22 @@ NO FUNCIONA EN RESPONSIVE*/
 } 
 @media(max-width:768px) {
     .tercera {
-        margin-top: 320px;
+        margin-top: 20px;
     }
 }
 @media(max-width:576px) {
     .tercera {
-        margin-top: 720px;
+        margin-top: 20px;
     }
 }
 @media(max-width:440px) {
     .tercera {
-        margin-top: 920px;
+        margin-top: 20px;
     }
 }
 @media(max-width:412px) {
     .tercera {
-        margin-top: 920px;
+        margin-top: 20px;
     }
 }
 /*aca empieza cuarta seccion resumen de cv*/
@@ -910,13 +915,14 @@ NO FUNCIONA EN RESPONSIVE*/
 }
 
 /*aca empieza quinta seccion con mis habilidades*/
-
+  
 .quinta {
     /* border: var(--paraBordes); */
     width: 100%;
     margin-top: 100px;
 }
 .quinta h2 {
+    width: 30%;
     margin-left: 7%;
     padding: 30px 0;
 }
