--- a/css/estilo.css
+++ b/css/estilo.css
@@ -462,7 +462,7 @@ NO FUNCIONA EN RESPONSIVE*/
 }
 @media(max-width:412px){
     .experiencia1 {
-        margin-top: 370px;
+        margin-top: 320px;
     }
     
 }
@@ -1147,6 +1147,11 @@ NO FUNCIONA EN RESPONSIVE*/
             margin: 0 0 0 6%;
         }   
     
+    }
+    @media(max-width:412px){
+        .quinta {
+            margin-top: 205%;
+        }
     }
     
     @media(max-width:360px){
