--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1543,6 +1543,15 @@ NO FUNCIONA EN RESPONSIVE*/
     color: black;
     font-size: 150%;
 }
+.email {
+    border:none;
+    border-bottom: 1px solid black;
+    width: 100%;
+    height: 50px;
+    margin-bottom: 10px;
+    background-color: rgb(120,240,121);
+    
+}
 @media(max-width:660px) {
     .septima h1 {
         font-size: 200%;
